--- a/Predicting Fraudulent Transaction .ipynb
+++ b/Predicting Fraudulent Transaction .ipynb
@@ -602,7 +602,7 @@
    "id": "251b7781",
    "metadata": {},
    "source": [
-    "# Calculating New balance columns from existing ones which contains the final balance"
+    "# Calculating New balance columns from existing Ones\n"
    ]
   },
   {
