--- a/Predicting Fraudulent Transaction .ipynb
+++ b/Predicting Fraudulent Transaction .ipynb
@@ -455,7 +455,6 @@
     }
    ],
    "source": [
-    "#checking for outliers using box plot\n",
     "for col in fraud.columns:\n",
     "    if fraud[col].dtype=='float64' or fraud[col].dtype=='int64':\n",
     "        print(col)\n",
@@ -494,7 +493,6 @@
     }
    ],
    "source": [
-    "#so now we are checking outliers in some numerical columns\n",
     "numerical_columns=['step','amount','oldbalanceOrg','newbalanceOrig','oldbalanceDest','newbalanceDest']\n",
     "outliers_count={}\n",
     "for col in numerical_columns:\n",
@@ -502,14 +500,11 @@
     "    Q3 = fraud[col].quantile(0.75)\n",
     "    IQR = Q3 - Q1\n",
     "\n",
-    "    # Identify potential outliers using the IQR method\n",
     "    outliers = ((fraud[col] < (Q1 - 1.5 * IQR)) |\n",
     "                (fraud[col] > (Q3 + 1.5 * IQR)))\n",
     "    \n",
-    "    # Finding the total number of outliers for the current column\n",
-    "    num_outliers = outliers.sum()\n",
     "    \n",
-    "    # Store the count in the dictionary\n",
+    "    num_outliers = outliers.sum()\n",
     "    outliers_count[col] = num_outliers\n",
     "    \n",
     "for col, count in outliers_count.items():\n",
@@ -591,7 +586,6 @@
    ],
    "source": [
     "correlation_matrix = fraud.corr()\n",
-    "# Create a heatmap of the correlation matrix\n",
     "plt.figure(figsize=(10, 8))\n",
     "sns.heatmap(correlation_matrix, annot=True)\n",
     "plt.show()"
@@ -612,10 +606,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create new columns for balance changes\n",
     "fraud['balanceChangeOrig'] = fraud['newbalanceOrig'] - fraud['oldbalanceOrg']\n",
     "fraud['balanceChangeDest'] = fraud['newbalanceDest'] - fraud['oldbalanceDest']\n",
-    "# Drop the original balance columns\n",
     "fraud.drop(['oldbalanceOrg', 'newbalanceOrig', 'oldbalanceDest', 'newbalanceDest'], axis=1, inplace=True)"
    ]
   },
@@ -685,8 +677,6 @@
    "source": [
     "onehot = pd.get_dummies(fraud['type'], prefix='type')\n",
     "df = pd.concat([fraud, onehot], axis=1)\n",
-    "\n",
-    "# Drop the original 'type' column\n",
     "df.drop(['type'], axis=1, inplace=True)"
    ]
   },
@@ -1099,8 +1089,8 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X = df.drop(['isFraud'], axis=1)  # Features\n",
-    "y = df['isFraud']  # Target\n",
+    "X = df.drop(['isFraud'], axis=1)\n",
+    "y = df['isFraud']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=2)"
    ]
   },
@@ -1112,7 +1102,6 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "# Feature Scaling: Standardize the features\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)"
@@ -1139,7 +1128,6 @@
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "# Initialize and train the Logistic Regression model\n",
     "model = LogisticRegression(max_iter=500)\n",
     "model.fit(X_train_scaled, y_train)"
    ]
@@ -1257,17 +1245,12 @@
    ],
    "source": [
     "feature_importances = model_dt.feature_importances_\n",
-    "\n",
-    "# Create a DataFrame to display feature importances\n",
     "feature_importance_df = pd.DataFrame({\n",
     "    'Feature': X_train.columns,\n",
     "    'Importance': feature_importances\n",
     "})\n",
     "\n",
-    "# Sort features by importance\n",
     "feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
-    "\n",
-    "# Print the feature importance DataFrame\n",
     "print(feature_importance_df)"
    ]
   }
